# PSZT2

./: CMakeLists.txt
data/: boston.csv  tests.csv  tests_python.csv
inc/: calculate_gini.hpp  common.hpp  data_read.hpp  decision_tree.hpp  make_prediction.hpp  sort_col.hpp  tree_ptr.hpp
python_src/: test.py
src/: calculate_gini.cc  data_read.cc  decision_tree.cc  main.cc  make_prediction.cc  sort_col.cc  tree_ptr.cc
